Rooms Views, this is for the new calendar

--- a/.htaccess
+++ b/.htaccess
@@ -30,3 +30,4 @@ RewriteRule ^add-broker/$ /add-broker.php?section=9
 RewriteRule ^broker/([0-9]+)/([A-Za-z0-9-]+)/$ /add-broker.php?brokerId=$1&section=10
 RewriteRule ^calendar/$ /calendar.php?section=11
 RewriteRule ^reservations/$ /reservations.php?section=12
+RewriteRule ^rooms/$ /rooms.php?section=13
