--- a/.htaccess
+++ b/.htaccess
@@ -35,3 +35,5 @@ RewriteRule ^rooms/month/$ 					/rooms-month.php?section=13
 RewriteRule ^rooms/month/from/([A-Za-z0-9-]+)/$ 	/rooms-month.php?from=$1&section=13
 RewriteRule ^reports/$ 						/reports.php?section=16
 RewriteRule ^reports/from/([A-Za-z0-9-]+)/$ 	/reports.php?from=$1&section=16
+
+#	Rooms
